structured barebones format for the app with some dummy content

--- a/index.html
+++ b/index.html
@@ -10,10 +10,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap">
     <link rel="stylesheet" href="./index.css">
-    <script src="./index.js"></script>
+    <script defer src="./index.js"></script>
 </head>
 
 <body>
+    <div class="header">Whats the Weather ?!</div>
 
+    <div class="app-container">
+        <div class="form-container">
+            <form action="#" method="get">
+                <label for="city-name">Enter a city name: </label>
+                <input type="text" id="city-name" placeholder="Type a city name" autocomplete="off">
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+
+        <h3>Today is</h3>
+
+        <img src="#" alt="weather-icon" />
+
+        <p>Weather info</p>
+    </div>
 </body>
 </html>
