added data attributes to form and input for quering

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <div class="app-container">
         <div class="form-container">
-            <form action="#" method="get">
+            <form data-city-form action="#" method="get">
                 <label for="city-name">Enter a city name: </label>
-                <input type="text" id="city-name" placeholder="Type a city name" autocomplete="off">
+                <input data-city-input type="text" id="city-name" placeholder="Type a city name" autocomplete="off">
                 <button type="submit">Submit</button>
             </form>
         </div>
