removed h3 header, added data attributes to img and weather info

--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
             </form>
         </div>
 
-        <h3>Today is</h3>
+        <img data-climate-img src="https://c.tenor.com/YH2rOYGA1WEAAAAC/quby-chan-fan.gif" alt="weather-icon" />
 
-        <img src="#" alt="weather-icon" />
-
-        <p>Weather info</p>
+        <p data-weather-info></p>
     </div>
 </body>
 </html>
